# OpenGL

./: README.md
texture/: CMakeLists.txt
texture/glsl/texture/: f_shader.glsl  v_shader.glsl
texture/include/: log.h
texture/main/: review_main.cpp  texture_main.cpp
texture/src/: GlslDealConfig.cpp
window/: CMakeLists.txt  pp.cpp
window/glsl/rectangle/: rectangle_v.glsl
window/main/: gmain.cpp  rectanger_main.cpp  triangle_main.cpp  window_main.cpp
window/window/: CMakeLists.txt
window/window/glsl/: FragmentShader.glsl  VertexShader.glsl
window/window/glsl/rectangle/: rectangle_f.glsl
window/window/include/: GlslDealConfig.h
window/window/main/: rectanger_main.cpp
